--- a/问答社区的思考.md
+++ b/问答社区的思考.md
@@ -51,3 +51,11 @@ Threats:
 2. 以及提供这个问题的相关信息的博文，比如这个问题https://q.cnblogs.com/q/104007/ 在详情页中侧边栏一是显示相关的问题，二是显示C# CLR 相关的博文
 
 **回答的快感主要是基于：回答别人问题自我成就感/别人点赞、评论等正反馈/问题产品对回答的激励/等等。**
+
+
+
+博问广告位放在博文最后的问题评论下面。
+
+
+
+有个本质的问题，用户会把`博问` 和 问答联系起来吗？一听到博问，会知道这个是干啥的吗？
