--- a/问答社区的思考.md
+++ b/问答社区的思考.md
@@ -9,53 +9,57 @@
 * 我将要做什么？（提升博问产品的流量以及用户使用数。）
 * 我拥有什么？
 
-SWOT
+今年的工作计划就是围绕这上面这三点来展开，最近一段时间，我一直在使用用着国内外的问答社区的产品（SegmentFault，Stack Overflow），关注（知乎，分答，Quora等）
+边使用的过程中，边对比我们产品和他们产品的优劣。我做了一点分析，以及一些困惑和疑惑的地方：
+
+首先对于我们博问产品来讲：
+主线是一个知识分享的社区，用户把自己知道的知识告诉其他想要得到这方面知识的人，同时也可以从别人那得到自己不知道的知识。
+我所需要思考的是，我们社区 如何快速的帮助用户解决他/她们的问题？
+
+"回答的快感主要是基于：回答别人问题自我成就感/别人点赞、评论等正反馈/问题产品对回答的激励/等等。"
+
+接下来，我小做了一个 SWOT：
 
 Strengths：
 
-> 1. 大量的优质博主在博客园中写了优秀的博客为基础（不缺乏相关领域的专家）
-> 2. C#、 .NET 技术领域上聚集的用户相对较多
-> 3. .net-core 技术为亮点
+1. 大量的优质博主在博客园中写了优秀的博客为基础（不缺乏相关领域的专家）
+2. C#、 .NET 技术领域上聚集的用户相对较多，相较其他，在这些领域较为专业
+3. 紧跟.net-core ，为其他社区所缺乏
 
 Weaknesses：
 
-> 1. 百度、Google收录过慢
-> 2. 用户活跃度较低，跳出率高，提问用户数少，回答用户数少。
-> 3. UI 质朴
+1. 百度、Google收录过慢
+2. 用户活跃度较低，跳出率高，提问用户数少，回答用户数少。
+3. UI 质朴
+4. 用户辨识度低，问过一些同学，当问起“博问”时，他们的第一反应都不是很清楚这是一个问答社区。（*）
 
 Opportunities：
 
-> 1. 建议以C#、.NET 为中心开始往其他扩散，把握住.NET-Core
-> 2. 跟进热点科技，比如现如今的区块链以及人工智能，最好能开辟相应的分频道。主站点也可以采取这样。
-> 3. 利用好优质博主的资源，引导博主去问答社区回答问题（如何引导？？？？）
+1. 建议以C#、.NET 为中心开始往其他扩散，把握住.NET-Core
+2. 跟进热点科技，比如现如今的区块链以及人工智能，最好能开辟相应的分频道。主站点也可以采取这样。
+3. 利用好优质博主的资源，引导博主去问答社区回答问题（如何引导？？？？）
+4. 中文问答社区国内还不是太成熟。
 
 Threats:
 
-> 1. SegmentFault 中的问答社区，使用了几天，感觉用户活跃度，以及问题解决速度相对快的很多，提问的人多，回答的人也多。一个小时内的提问数等于我们一天内的提问数。
+1. SegmentFault 中的问答社区，使用了几天，感觉用户活跃度，以及问题解决速度相对快的很多，提问的人多，回答的人也多。一个小时内的提问数等于我们一天内的提问数。
+2. 有 Stack Overflow 和 SegmentFault 可以选择，为什么会来我们社区提问？
 
 
+以下是最近想的几个问题的一些自己的解决办法：
 
-* 为什么明明可以在Segmentfault 社区提问，却要来我们社区提问？
-* 我们和Segmentfault 有什么不同？
-
-- 优质的用户，以及专家是否为问答社区所必备？
-
-
-- 折叠掉 不相关的回答
-
-
-
-**解决网页跳出率**
-
+一、解决网页跳出率：
 1. 问题详情中显示相关联的问题。
 2. 以及提供这个问题的相关信息的博文，比如这个问题https://q.cnblogs.com/q/104007/ 在详情页中侧边栏一是显示相关的问题，二是显示C# CLR 相关的博文
 
-**回答的快感主要是基于：回答别人问题自我成就感/别人点赞、评论等正反馈/问题产品对回答的激励/等等。**
+二、提升用户体验方面：
+1. 界面UI的改版
+2. 折叠掉不相关的回答
+3. 在声望系统中增加新功能，提高用户参与感，让用户融于社区中
 
 
+三、品牌辨识度
+用户会把博问 和 问答社区联系起来吗？一听到博问，会知道这个是干啥的吗？
 
-博问广告位放在博文最后的问题评论下面。
-
-
-
-有个本质的问题，用户会把`博问` 和 问答联系起来吗？一听到博问，会知道这个是干啥的吗？
+四：广告宣传
+建议把博问的宣传广告位放在 博文评论下面的那个广告位
