--- a/问答社区的思考.md
+++ b/问答社区的思考.md
@@ -23,7 +23,7 @@
 Strengths：
 
 1. 大量的优质博主在博客园中写了优秀的博客为基础（不缺乏相关领域的专家）
-2. C#、 .NET 技术领域上聚集的用户相对较多，相较其他，在这些领域较为专业
+2. C#、 .NET 技术领域上聚集的用户相对较多，相较其他社区，我们在这些领域较为专业和权威
 3. 紧跟.net-core ，为其他社区所缺乏
 
 Weaknesses：
