--- a/接口和委托的泛型可变性.md
+++ b/接口和委托的泛型可变性.md
@@ -1,12 +1,12 @@
 ### Before You Read:
 
-   This article is ablout a branch of generic. Convarint and Contravariant.Generic first come up in `C#2.0`,in that time period. Generic variance is not support. It called invariant.
+   This article is ablout a branch of generic. Covariant and Contravariant. Generic first come up in `C#2.0`,in that time period. Generic variance is not support. It called invariant.
 
 ### Where should we use conravariant?
 
-​    We can transform `SomeType<Circle>` to `SomeType<IShape>` when we use  convariant. However, contravariant is opposite. It can transform `SomeType<IShape` to `SomeType<Circle>`.
+​    We can transform `SomeType<Circle>` to `SomeType<IShape>` when we use  covariant. However, contravariant is opposite. It can transform `SomeType<IShape` to `SomeType<Circle>`.
 
-> Only when `SomeType` describe return type parameter, convariant is safe.
+> Only when `SomeType` describe return type parameter, covariant is safe.
 >
 > Only when `SomeType` describe accept type parameter, contravariant is safe.
 
